# cerebellum

./: .gitignore  .npmignore  .npmrc  CONTRIBUTING.md  LICENSE  README.md  main2.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md
cerebellum/: __init__.py  core.py  core_abstractions.py  openai.py  recorders.py  setup.py
cerebellum-project/: index.js  jsconfig.json  package-lock.json  package.json
cerebellum/browser/: __init__.py  limb.py  local.py  planner.py  sensor.py  session.py  types.py
cerebellum/browser/planner/: gemini.py  human.py  llm.py  local.py  openai.py
cerebellum/limb/browser/: limb.py  local.py  planner.py  sensor.py  session.py  types.py
cerebellum/memory/: file.py
cerebellum/recorder/: display_recorder.py
example/: README.md  amazon.ts  amazon_example.py  auth_helper.py  browser.py  calendly_example.py  california_edd.py  checkbox.py  checkbox_example.py  dmv_example.py  finditparts.py  geico.py  github_example.py  google.ts  guidance_test.py  irs.ts  parking_ticket.py  prompt.txt  radio_button.py  read_from_file.py  select_example.py  session.cere  tsconfig.json  wikipedia.ts
python/: CONTRIBUTING.md  README.md  pyproject.toml
python/examples/: amazon.py  google.py
python/src/cerebellum/: __init__.py  browser.py  utils.py
python/src/cerebellum/planners/: anthropic.py  shared.py  vllm.py
python/src/cerebellum/train/: preprocess_mind2web.py
python/tests/: conftest.py  test_browser.py  test_utils.py
python/tests/planners/: test_anthropic_planner.py
src/: abstracts.py  anthropic.ts  browser.ts  core_abstractions.py  gemini.py  google.py  html.py  html_utils.py  index.ts  main.py  main.ts  main2.py  openai.py  openapi.py  reasoner.py  recorders.py  session.py  util.ts
src/cerebellum/browser/: __init__.py  memory.py  session.py
src/cerebellum/browser/planner/: __init__.py  llm.py
src/limb/browser/: limb.py  planner.py  sensor.py  session.py  types.py
src/planners/: anthropic.ts
test/: test_html_extractors.py  test_html_sensors.py
test/browser/: test_limb.py  test_sensors.py
test/html_samples/: collapse_tag_post.html  collapse_tag_pre.html
training/: .gitattributes  .gitignore  README.md  convert_to_qwen.py  llama-factory-formatting-log.txt  mind2web.ipynb  mind2web_to_molmo.py  mind2web_to_qwen_llama_factory.py  molmo_to_hfdataset.py  preprocess_mind2web.py  pyproject.toml  qwen_llamafactory.json  request.txt  tool_use_desc.json
typescript/: .npmignore  LICENSE  README.md  package-lock.json  package.json
typescript/example/: README.md  amazon.ts  flight.ts  google.ts  wikipedia.ts
typescript/src/: browser.ts  index.ts
typescript/src/planners/: anthropic.ts
