[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cerebellum"
version = "0.1"
description = "Cerebellum is an AI-driven browser automation system."
authors = ["Han Wang <han.wang.2718@gmail.com>"]
maintainers = ["Han Wang <han.wang.2718@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/theredsix/cerebellum"
repository = "https://github.com/theredsix/cerebellum.git"
documentation = "https://github.com/theredsix/cerebellum"
keywords = ["llm", "ai", "agent", "browser", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]

[tool.poetry.dependencies]
python = ">=3.8"
playwright = "*"
cssutils = "*"
beautifulsoup4 = "*"